# p25-hotspot

./: CMakeLists.txt  GITHUB_SETUP.md  INSTALL.md  PROGRESS.md  QUICKSTART.md  README.md  WEB_INTERFACE.md  config.example.yaml  install.sh  license-validator.py  p25-hotspot.service  p25-license-validator.service
src/: Config.cpp  Config.h  Logger.cpp  Logger.h  ModemSerial.cpp  ModemSerial.h  NetworkClient.cpp  NetworkClient.h  P25Protocol.cpp  P25Protocol.h  TrunkingController.cpp  TrunkingController.h  main.cpp
web/: README.md  app.py  license.py  p25-hotspot-web.service
web/static/css/: style.css
web/templates/: base.html  config.html  index.html  license.html  logs.html
